# rag-fundamentals

./: .env.example  README.md  pyproject.toml
data/: devset.jsonl  safety_prompts.jsonl
data/corpus/: api.md  changelog.md  faq.md  install.md  security.md  troubleshooting.md
src/: cli.py  config.py  evaluate.py  pipeline.py  schemas.py
src/clients/: model_client.py
src/metrics/: scoring.py  support.py
src/prompts/: answer_prompt.jinja
src/retrieval/: bm25_scratch.py  indexer.py  retriever.py  simple_index.py
src/utils/: text.py
